# terraform-secure

./: .gitignore  README.md  pyproject.toml
examples/: main.tf  tf-insecure-diff.json
examples/insecure-firewall/: insecure-firewall.tf  tfplan.json
src/tfsec/: __init__.py  analyze.py  parse.py
tests/: conftest.py
tests/tfsec/: test_analyze.py  test_parse.py
