[tool.poetry]
name = "terraform-secure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "tfsec", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0.0"
llm-interface = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
